@@ -64,6 +64,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - compat.{cpp,h}: remove inline keyword, because function is not defined
       in header file.
     - compat.h: include QtCore/qglobal.h for Q_OS_... macros.
+    - pulsemanager.{cpp,h}: new class for PulseAudio management.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
